[package]
name = "rok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
httparse = "1.7.1"
bincode = "1.3.3"
serde = { version = "1.0.137", features = ["derive"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
